Created H2 database, added Station table

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-spring.application.name=fujitsu-task
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:file:./database/springboot;AUTO_SERVER=TRUE;
+spring.sql.init.mode=always
